# https-ssl-tls-implementation

./: README.md  requirements.txt
code/: client.py  server.py
src/: pyproject.toml
src/client/: main.py
src/client/crypto/: encryption.py  format.py
src/crypto/: encryption.py  format.py  gen_certificate.py  gen_keys.py
src/server/: main.py
src/server/crypto/: gen_keys.py
