[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "self-https"
version = "0.1.0"
description = "simple self https implementation"
dependencies = [
  "cryptography",
  "jsonschema",
  "jsonschema-specifications",
  "websockets",
]
requires-python = ">=3.10"

[tool.setuptools]
py-modules = ["client", "server"]
packages = ["crypto"]
